Fixed Main Image
Utilising gradient overlap over image.

--- a/styles.css
+++ b/styles.css
@@ -323,7 +323,7 @@ header{
 }
 
 .main-subheading{
-    color: #5c5c5c;
+    color: #6f6f7c;
     font-size: 3rem;
 }
 
@@ -332,8 +332,10 @@ header{
 }
 
 .main-details{
-    color: #5c5c5c;
+    color: #494949;
     font-weight: bold;
+    font-size: 1.3rem;
+    margin-top: 10px;
 }
 
 .main-details > span{
@@ -342,12 +344,12 @@ header{
 }
 
 .main-image{
-    clip-path: polygon(50% 0%, 100% 0, 100% 100%, 28% 100%);
     height: 100%;
     width: 100%;
-    background-image: url(images/halo.jpg);
+    background-image: radial-gradient(ellipse at 60% 35%,rgba(0, 0, 0, 0.23),rgba(0, 0, 0, 0.85),rgba(0, 0, 0, 1)), url(images/halo.jpg);
     background-size: cover;
     background-position: top;
+    filter: brightness(1.8);
 }
 
 
